[tool.poetry]
name = "mega-market"
version = "0.1.0"
description = "Yandex Backend Development School task."
authors = ["Kirill Lapushinskiy <kirilllapushinskiy@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
