[tool.poetry]
name = "mega-market"
version = "0.1.0"
description = "Yandex Backend Development School task."
authors = ["Kirill Lapushinskiy <kirill@lapushinskiy.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
asyncpg = "^0.25.0"
loguru = "^0.6.0"
alembic = "^1.8.0"
uvicorn = {extras = ["standart"], version = "^0.18.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
